<?xml version="1.0" encoding="UTF-8" ?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggshell3"
    android:fillViewport="true"
    tools:context=".GlideViewImageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/eggshell3"
        tools:context=".GlideViewImageActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_abl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/action_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.AppBarLayout>

        <!--  [1]  Here is the Recipe's Image  -->
        <!--
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/full_image_view"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar_abl"
            app:layout_constraintHorizontal_bias="0.1"
            android:contentDescription="@string/recipe_image_descripton" />
        -->
        <ImageView
            android:id="@+id/full_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/appbar_abl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/recipe_image_descripton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/imagetext_til"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filename_str"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintTop_toBottomOf="@+id/full_image_view" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/imagetext_tiet"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--   [2] Ingredients    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredients_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/recipe_ingredients"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagetext_til">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredients_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--   [3] Label    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/recipe_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_til">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/label_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--   [4] Instructions    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/instructions_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/recipe_instructions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_til" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/instructions_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--   [5] Category    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/catstr"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_til" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--   [6] Notes    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notes_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/recipe_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_til" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--    This LinearLayout is basically a hack; I need to keep all
                of the TextInputLayouts together, and evenly-spaced-apart,
                yet have found no other way (apart from this hack), to do so
                while keeping the bottom-most view-object the same distance
                apart...
                Future Work: Use a better method of handling the bottom-most
                view-object's relation to the other views and the Bottom-Nav-
                View, evenly spaced.
        -->
        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes_til"
            app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view">
         </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_bar_view_recipe" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>